--- a/QComp/ToolWindows/QCompWindowControl.xaml
+++ b/QComp/ToolWindows/QCompWindowControl.xaml
@@ -16,7 +16,14 @@
              Name="QComp"
              Loaded="UserControl_Loaded">
     <Grid>
-        <StackPanel x:Name="ControlsPanel">
+        <Grid x:Name="ControlsPanel">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition/>
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
+
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="150"/>
@@ -24,51 +31,102 @@
                     <ColumnDefinition Width="40"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Content="Save current binary as" FontSize="12" Foreground="White" VerticalAlignment="Center"/>
-                <TextBox x:Name="SaveNewNameTextbox" Grid.Column="1" Margin="2" FontSize="12" Foreground="White"/>
-                <Button x:Name="SaveNewButton" Grid.Column="2" Margin="2" Content="💾" HorizontalAlignment="Center" FontSize="12" Foreground="White" Click="SaveNewButton_Click"/>
+                <Label Content="Save current binary as" VerticalAlignment="Center"/>
+                <TextBox x:Name="SaveNewNameTextbox" Grid.Column="1" Margin="2" Padding="4,0" VerticalContentAlignment="Center"/>
+                <Button x:Name="SaveNewButton" Grid.Column="2" Margin="2" Content="💾" HorizontalAlignment="Center" Click="SaveNewButton_Click"/>
             </Grid>
-            <Grid>
+            <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="150"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <Label Content="Compare current binary to" FontSize="12" Foreground="White" VerticalAlignment="Center"/>
-                <ComboBox x:Name="CompareToCombobox" Grid.Column="1" Margin="2" FontSize="12" Foreground="White"/>
+                <Label Content="Compare current binary to" VerticalAlignment="Center"/>
+                <ComboBox x:Name="CompareToCombobox" Grid.Column="1" Margin="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Tag="{Binding}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="25" />
+                                </Grid.ColumnDefinitions>
+
+                                <Label Content="{Binding}" HorizontalContentAlignment="Center" Padding="4,0"/>
+                                <Button Grid.Column="1" Tag="{Binding}" Content="X" Background="Red" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="RemoveBinaryButton_Click">
+                                    <Button.ToolTip>Delete this saved binary.</Button.ToolTip>
+                                    <Button.Style>
+                                        <Style TargetType="Button">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}}" Value="{x:Null}">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Button.Style>
+                                </Button>
+                            </Grid>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                    <ComboBox.ItemContainerStyle>
+                        <Style TargetType="{x:Type ComboBoxItem}">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        </Style>
+                    </ComboBox.ItemContainerStyle>
+                </ComboBox>
             </Grid>
 
-            <Expander Header="Arguments" Foreground="White">
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
                 <StackPanel>
-                    <Label>Rounds</Label>
-                    <TextBox x:Name="RoundsTextBox" Text="1" Margin="5" FontSize="12" Foreground="White" PreviewTextInput="RoundsTextBox_PreviewTextInput"/>
-                    <Label>Launch Arguments</Label>
-                    <TextBox x:Name="ArgumentsTextbox" Height="100" Margin="5"/>
+                    <Expander Header="Arguments" Foreground="White">
+                        <StackPanel>
+                            <Label>Rounds</Label>
+                            <TextBox x:Name="RoundsTextBox" Text="1" Margin="2" PreviewTextInput="RoundsTextBox_PreviewTextInput"/>
+                            <Label>Launch Arguments</Label>
+                            <TextBox x:Name="ArgumentsTextbox" Height="100" Margin="2"/>
+                        </StackPanel>
+                    </Expander>
+
+                    <Button x:Name="CompareButton" Content="Compare!" Margin="2" Click="CompareButton_Click"/>
+
+                    <DataGrid x:Name="ResultDataGrid" Margin="5" Background="Transparent" Foreground="White" RowBackground="Transparent" IsReadOnly="True" BorderThickness="2" BorderBrush="Gray" AutoGenerateColumns="False" HeadersVisibility="Column" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" GridLinesVisibility="Horizontal" HorizontalGridLinesBrush="Gray">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Path=Name}"/>
+                            <DataGridTextColumn Binding="{Binding Path=Value1}"/>
+                            <DataGridTextColumn Binding="{Binding Path=Value2}"/>
+                        </DataGrid.Columns>
+                        <DataGrid.Resources>
+                            <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
+                                <Setter Property="Background" Value="Transparent" />
+                            </Style>
+                        </DataGrid.Resources>
+                    </DataGrid>
+
+                    <Grid x:Name="PlotGrid" Margin="5">
+
+                    </Grid>
                 </StackPanel>
-            </Expander>
+            </ScrollViewer>
 
-            <Button x:Name="CompareButton" Content="Compare!" Margin="2" FontSize="12" Foreground="White" Click="CompareButton_Click"/>
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
-            <DataGrid x:Name="ResultDataGrid" Height="91" Margin="5" Background="Transparent" Foreground="White" RowBackground="Transparent" IsReadOnly="True" BorderThickness="2" BorderBrush="Gray" AutoGenerateColumns="False" HeadersVisibility="Column" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" GridLinesVisibility="Horizontal" HorizontalGridLinesBrush="Gray">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Path=Name}"/>
-                    <DataGridTextColumn Binding="{Binding Path=Value1}"/>
-                    <DataGridTextColumn Binding="{Binding Path=Value2}"/>
-                </DataGrid.Columns>
-                <DataGrid.Resources>
-                    <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
-                        <Setter Property="Background" Value="Transparent" />
-                    </Style>
-                </DataGrid.Resources>
-            </DataGrid>
-
-            <Grid x:Name="PlotGrid" Margin="5">
-                
+                <Button x:Name="HelpButton" Content="?" Margin="5" HorizontalAlignment="Center" Click="HelpButton_Click">
+                    <Button.ToolTip>Open the help page.</Button.ToolTip>
+                </Button>
+                <Button x:Name="GitButton" Grid.Column="1" Content="Git" Margin="5" HorizontalAlignment="Center" Click="GitButton_Click">
+                    <Button.ToolTip>Open the projects GitHub Repository page.</Button.ToolTip>
+                </Button>
+                <Label Grid.Column="2" Content="QComp 2024" VerticalAlignment="Center"/>
             </Grid>
-        </StackPanel>
+        </Grid>
+
         <Grid x:Name="RunningGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden">
             <StackPanel>
-                <Label FontSize="20" Foreground="White">Running...</Label>
+                <Label FontSize="20">Running...</Label>
                 <ProgressBar x:Name="RunningProgressBar" Height="5"/>
                 <Button x:Name="CancelButton" Content="Cancel" Margin="5" Click="CancelButton_Click"/>
             </StackPanel>
