--- a/QComp/ToolWindows/QCompWindowControl.xaml
+++ b/QComp/ToolWindows/QCompWindowControl.xaml
@@ -10,7 +10,7 @@
              xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
              toolkit:Themes.UseVsTheme="True"
              mc:Ignorable="d"
-             d:DesignHeight="300"
+             d:DesignHeight="400"
              d:DesignWidth="400"
              d:Background="Gray"
              Name="QComp"
@@ -18,7 +18,7 @@
     <Grid>
         <Grid x:Name="ControlsPanel">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="40"/>
                 <RowDefinition/>
                 <RowDefinition Height="40"/>
@@ -33,7 +33,9 @@
 
                 <Label Content="Save current binary as" VerticalAlignment="Center"/>
                 <TextBox x:Name="SaveNewNameTextbox" Grid.Column="1" Margin="2" Padding="4,0" VerticalContentAlignment="Center"/>
-                <Button x:Name="SaveNewButton" Grid.Column="2" Margin="2" Content="💾" HorizontalAlignment="Center" Click="SaveNewButton_Click"/>
+                <Button x:Name="SaveNewButton" Grid.Column="2" Margin="2" Content="💾" HorizontalAlignment="Center" Click="SaveNewButton_Click">
+                    <Button.ToolTip>Save currently build binary with the given configuration.</Button.ToolTip>
+                </Button>
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
@@ -81,12 +83,57 @@
                         <StackPanel>
                             <Label>Rounds</Label>
                             <TextBox x:Name="RoundsTextBox" Text="1" Margin="2" PreviewTextInput="RoundsTextBox_PreviewTextInput"/>
-                            <Label>Launch Arguments</Label>
-                            <TextBox x:Name="ArgumentsTextbox" Height="100" Margin="2"/>
+                            <Grid Height="40">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="150"/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="40"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label VerticalAlignment="Center">Launch Arguments</Label>
+                                <ComboBox x:Name="PreviousArgumentsCombobox" Grid.Column="1" Margin="2" SelectionChanged="PreviousArgumentsCombobox_SelectionChanged">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid Tag="{Binding}">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition />
+                                                    <ColumnDefinition Width="25" />
+                                                </Grid.ColumnDefinitions>
+
+                                                <Label Content="{Binding}" HorizontalContentAlignment="Center" Padding="4,0"/>
+                                                <Button Grid.Column="1" Tag="{Binding}" Content="X" Background="Red" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="RemoveArgumentButton_Click">
+                                                    <Button.ToolTip>Delete this saved argument.</Button.ToolTip>
+                                                    <Button.Style>
+                                                        <Style TargetType="Button">
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}}" Value="{x:Null}">
+                                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </Button.Style>
+                                                </Button>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                    <ComboBox.ItemContainerStyle>
+                                        <Style TargetType="{x:Type ComboBoxItem}">
+                                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                        </Style>
+                                    </ComboBox.ItemContainerStyle>
+                                </ComboBox>
+                                <Button x:Name="SaveArgumentsButton" Grid.Column="2" Margin="2" Content="💾" HorizontalAlignment="Center" Click="SaveArgumentsButton_Click">
+                                    <Button.ToolTip>Save currently entered arguments.</Button.ToolTip>
+                                </Button>
+                            </Grid>
+                            <TextBox x:Name="ArgumentsTextbox" Height="100" Margin="2" TextWrapping="Wrap">
+                            </TextBox>
                         </StackPanel>
                     </Expander>
 
                     <Button x:Name="CompareButton" Content="Compare!" Margin="2" Click="CompareButton_Click"/>
+
+                    <Separator Height="3"/>
 
                     <DataGrid x:Name="ResultDataGrid" Margin="5" Background="Transparent" Foreground="White" RowBackground="Transparent" IsReadOnly="True" BorderThickness="2" BorderBrush="Gray" AutoGenerateColumns="False" HeadersVisibility="Column" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" GridLinesVisibility="Horizontal" HorizontalGridLinesBrush="Gray">
                         <DataGrid.Columns>
